# od-lang

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/frontend/src/parser/: array_parser.rs  errors_parser.rs  fn_parser.rs  struct_parser.rs  test_parser.rs  var_parser.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: environment.rs  interpreter.rs  lib.rs  native_functions.rs  values.rs
crates/runtime/src/interpreter/: expr.rs  interp_errors.rs  stmt.rs
crates/runtime/src/values/: array.rs  value_errors.rs
crates/tools/src/: errors.rs
scripts/: all_features_doc.od  any.od  generator_use_case.od  ideas.od  random_shit.od  syntax_highlight.od
scripts/use_cases/: features_needed.md
scripts/use_cases/calcul_derivee/: deriv.od
scripts/use_cases/cloth/: cloth.od  point.od  stick.od
scripts/use_cases/file_managment/: file.od
scripts/use_cases/interpreter/: ast.od  interpreter.od  lexer.od  main.od  parser.od  value.od
scripts/use_cases/iterator/: iterator.od
scripts/use_cases/mean_square/: mean_square.od
scripts/use_cases/morpion.od/: morpion.od  test.gd
scripts/use_cases/v2/: morpion.od
scripts/use_cases/v2/type_union_vs_enum/: enum.od  type_union.od
tests/: test_array.od  test_function.od  test_members.od  test_struct.od  test_var.od
vs-code-ext/: README.md
vs-code-ext/od-lang-tools/: od-lang-tools-1.0.0.vsix
