[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
colored = { workspace = true }
thiserror = { workspace = true }
runtime = { path = "../runtime" }
frontend = { path = "../frontend" }